-Added copy task to msbuild to secure openssl files are present in the output directory after the build

--- a/IPASideLoader/IPASideLoader/IPASideLoader.csproj
+++ b/IPASideLoader/IPASideLoader/IPASideLoader.csproj
@@ -173,5 +173,16 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <OpensslFiles Include="..\..\openssl\**\*.*" />
+  </ItemGroup>
+
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Target Name="AfterBuild">
+    <Copy SourceFiles="@(OpensslFiles)" SkipUnchangedFiles="true" DestinationFiles="@(OpensslFiles->'$(OutputPath)openssl\%(RecursiveDir)%(Filename)%(Extension)')" />
+  </Target>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
